tests/pass/run/for_basic_parity/main.kira
@Main
function main() {
    for item in [10, 20, 30] {
        print("loop")
    }
    return
}
