tests/fail/semantics/duplicate_parent_type/main.kira
struct Base {}
class Child extends Base, Base {}

@Main
function entry() {
    return
}
